- remove java 1.5 specific code